// idl/hello/hello.proto
syntax = "proto3";

package task;

option go_package = "task";

import "api.proto";
//import "base.proto";
import "google/protobuf/struct.proto";

message TaskQuery {
  int64 id = 1[(api.query)="id",(api.body)="id"];
  string name = 2[(api.query)="name",(api.body)="name"];
  string description = 3[(api.query)="description",(api.body)="description"];
  string lang = 4[(api.query)="lang",(api.body)="lang"];
  int64 user_id = 7[(api.query)="user_id",(api.body)="user_id"];
  string user = 8[(api.query)="user",(api.body)="user"];
  int64 count = 9[(api.query)="count",(api.body)="count"];
  string expr = 10[(api.query)="expr",(api.body)="expr"];
  int64 timeout = 11[(api.query)="timeout",(api.body)="timeout"];
  int32 route_policy = 12[(api.query)="route_policy",(api.body)="route_policy"];
  optional bool deleted = 22[(api.query)="deleted",(api.go_tag)="json:\"deleted,omitempty\""];
  string routing_key = 13[(api.query)="routing_key",(api.body)="routing_key"];
  string status = 14[(api.query)="status",(api.body)="status"];
  uint64 page = 111;
  uint64 pageSize = 112;
}

message AuthData{
  string username = 1[(api.query)="username",(api.body)="username"];
  string password = 2[(api.query)="password",(api.body)="password"];
}

message KvFiled{
  string key = 1[(api.query)="key",(api.body)="key"];
  string value = 2[(api.query)="value",(api.body)="value"];
}
message Api {
  string url = 35[(api.query)="url",(api.body)="url"];
  string method = 36[(api.query)="method",(api.body)="method"];
  string content_type = 37[(api.query)="content_type",(api.body)="content_type"];
  string payload = 38[(api.query)="payload",(api.body)="payload"];
  string body = 40[(api.query)="body",(api.body)="body"];
  string auth_method = 41[(api.query)="auth_method",(api.body)="auth_method"];
  AuthData auth_data = 42[(api.query)="auth_data",(api.body)="auth_data"];
  repeated KvFiled header_list = 43[(api.query)="header_list",(api.body)="header_list"];
  repeated KvFiled form_data_list = 44[(api.query)="form_data_list",(api.body)="form_data_list"];
  repeated KvFiled www_form_list = 45[(api.query)="www_form_list",(api.body)="www_form_list"];
  map<string,string> header = 39[(api.query)="header",(api.body)="header"];
  map<string,string>  forms = 30[(api.query)="forms",(api.body)="forms"];
}

message KeepLog {
  int64 val = 33[(api.query)="val",(api.body)="val,omitempty"];
  string keep_type = 34[(api.query)="keep_type",(api.body)="keep_type,omitempty"];
}

message TaskData {
  string pre_cmd = 33[(api.query)="pre_cmd",(api.body)="pre_cmd,omitempty"];
  string content = 32[(api.query)="content",(api.body)="content,omitempty"];
  Api api= 31[(api.query)="api",(api.body)="api,omitempty"];
}

message webhooks {
  string webhook_url = 49[(api.query)="webhook_url",(api.body)="webhook_url,omitempty"];
  string secret = 50[(api.query)="secret",(api.body)="secret,omitempty"];
}

message email {
  bool enable = 41[(api.query)="enable",(api.body)="enable,omitempty"];
  repeated string receivers = 42[(api.query)="receivers",(api.body)="receivers,omitempty"];  // 多个邮箱地址以逗号分割
}
message WeChat {
  bool enable = 41[(api.query)="enable",(api.body)="enable,omitempty"];
  repeated string receivers = 42[(api.query)="receivers",(api.body)="receivers,omitempty"];  //
  repeated string groups = 43[(api.query)="groups",(api.body)="groups,omitempty"];  //
}
message webhook {
  bool enable = 43[(api.query)="enable",(api.body)="enable,omitempty"];
  repeated string urls = 44[(api.query)="urls",(api.body)="urls,omitempty"];  // 多个api url以逗号分割
}
// 多个飞书webhook以逗号分割
message lark {
  bool enable = 45[(api.query)="enable",(api.body)="enable,omitempty"];
  repeated webhooks webhooks = 52[(api.query)="webhooks",(api.body)="webhooks,omitempty"];
}
// 多个钉钉webhook以逗号分割
message dingding {
  bool enable = 48[(api.query)="enable",(api.body)="enable,omitempty"];
  repeated webhooks webhooks = 51[(api.query)="webhooks",(api.body)="webhooks,omitempty"];
}

message Notify{
  email email = 1[(api.query)="email",(api.body)="email,omitempty"];
  webhook webhook = 2[(api.query)="webhook",(api.body)="webhook,omitempty"];
  lark lark = 3[(api.query)="lark",(api.body)="lark,omitempty"];
  dingding dingding = 4[(api.query)="dingding",(api.body)="dingding,omitempty"];
  WeChat wechat = 5[(api.query)="wechat",(api.body)="wechat,omitempty"];
}

message TaskResp {
  int64 id = 1[(api.query)="id",(api.body)="id"];
  string name = 2[(api.query)="name",(api.body)="name"];
  string description = 3[(api.query)="description",(api.body)="description"];
  string lang = 4[(api.query)="lang",(api.body)="lang"];
  TaskData data = 5[(api.query)="data",(api.body)="data"];
  Notify notify = 6[(api.query)="notify",(api.body)="notify"];
  int64 user_id = 7[(api.query)="user_id",(api.body)="user_id"];
  string user = 8[(api.query)="user",(api.body)="user"];
  int64 count = 9[(api.query)="count",(api.body)="count"];
  string expr = 10[(api.query)="expr",(api.body)="expr"];
  int64 timeout = 11[(api.query)="timeout",(api.body)="timeout"];
  int32 route_policy = 12[(api.query)="route_policy",(api.body)="route_policy"];
  string routing_key = 13[(api.query)="routing_key",(api.body)="routing_key"];
  repeated string routing_keys = 22[(api.query)="routing_keys",(api.body)="routing_keys"];
  string status = 14[(api.query)="status",(api.body)="status"];
  int32 alarm_policy = 15[(api.query)="alarm_policy",(api.body)="alarm_policy"];
  string expect_content = 16[(api.query)="expect_content",(api.body)="expect_content"];
  int32 expect_code = 17[(api.query)="expect_code",(api.body)="expect_code"];
  int32 retry = 18[(api.query)="retry",(api.body)="retry"];
  string prev = 19[(api.query)="prev",(api.body)="prev"];
  string next = 20[(api.query)="next",(api.body)="next"];
  string updater = 21[(api.query)="updater",(api.body)="updater"];
  string created_at = 110[(api.query)="created_at",(api.body)="created_at"];
  string updated_at = 120[(api.query)="updated_at",(api.body)="updated_at"];
}

message TaskAllResp {
  int64 id = 1[(api.query)="id",(api.body)="id"];
  string name = 2[(api.query)="name",(api.body)="name"];
}

message TaskGetByIdResp {
  int64 id = 1[(api.query)="id"];
  string name = 2[(api.query)="name",(api.body)="name"];
  string description = 3[(api.query)="description",(api.body)="description"];
  string lang = 4[(api.query)="lang",(api.body)="lang"];
  TaskData data = 5[(api.query)="data",(api.body)="data"];
  Notify notify = 6[(api.query)="notify",(api.body)="notify"];
  int64 user_id = 7[(api.query)="user_id",(api.body)="user_id"];
  string user = 8[(api.query)="user",(api.body)="user"];
  int64 count = 9[(api.query)="count",(api.body)="count"];
  string expr = 10[(api.query)="expr",(api.body)="expr"];
  int64 timeout = 11[(api.query)="timeout",(api.body)="timeout"];
  int32 route_policy = 12[(api.query)="route_policy",(api.body)="route_policy"];
  string routing_key = 13[(api.query)="routing_key",(api.body)="routing_key"];
  string status = 14[(api.query)="status",(api.body)="status"];
  int32 alarm_policy = 15[(api.query)="alarm_policy",(api.body)="alarm_policy"];
  string expect_content = 16[(api.query)="expect_content",(api.body)="expect_content"];
  int32 expect_code = 17[(api.query)="expect_code",(api.body)="expect_code"];
  int32 retry = 18[(api.query)="retry",(api.body)="retry"];
  string prev = 19[(api.query)="prev",(api.body)="prev"];
  string next = 20[(api.query)="next",(api.body)="next"];
  string updater = 21[(api.query)="updater",(api.body)="updater"];
  bool deleted = 22[(api.query)="deleted",(api.go_tag)="json:\"deleted,omitempty\""];
  string created_at = 110[(api.query)="created_at",(api.body)="created_at"];
  string updated_at = 120[(api.query)="updated_at",(api.body)="updated_at"];
}


message PostTaskReq {
  string name = 2[(api.query)="name",(api.body)="name"];
  string description = 3[(api.query)="description",(api.body)="description"];
  string lang = 4[(api.query)="lang",(api.body)="lang"];
  TaskData data = 5[(api.query)="data",(api.body)="data"];
  Notify notify = 6[(api.query)="notify",(api.body)="notify"];
  int64 user_id = 7[(api.query)="user_id",(api.body)="user_id"];
  string user = 8[(api.query)="user",(api.body)="user"];
  repeated string parent_task_ids = 25[(api.query)="parent_task_ids",(api.body)="parent_task_ids"];
  bool parent_run_parallel = 26[(api.query)="parent_run_parallel",(api.body)="parent_run_parallel"];
  repeated string child_task_ids = 27[(api.query)="child_task_ids",(api.body)="child_task_ids"];
  bool child_run_parallel = 28[(api.query)="child_run_parallel",(api.body)="child_run_parallel"];
  repeated string routing_keys = 29[(api.query)="routing_keys",(api.body)="routing_keys"];
  int64 count = 9[(api.query)="count",(api.body)="count"];
  string expr = 10[(api.query)="expr",(api.body)="expr"];
  int64 timeout = 11[(api.query)="timeout",(api.body)="timeout"];
  int32 route_policy = 12[(api.query)="route_policy",(api.body)="route_policy"];
  string status = 14[(api.query)="status",(api.body)="status"];
  int32 alarm_policy = 15[(api.query)="alarm_policy",(api.body)="alarm_policy"];
  string expect_content = 16[(api.query)="expect_content",(api.body)="expect_content"];
  int32 expect_code = 17[(api.query)="expect_code",(api.body)="expect_code"];
  int32 retry = 18[(api.query)="retry",(api.body)="retry"];
  optional string prev = 19[(api.query)="prev",(api.body)="prev,omitempty"];
  optional string next = 20[(api.query)="next",(api.body)="next,omitempty"];
  string updater = 21[(api.query)="updater",(api.body)="updater,omitempty"];
  bool deleted = 22[(api.query)="deleted",(api.go_tag)="json:\"deleted\""];
  repeated int64 owner_ids = 23[(api.query)="owner_ids,omitempty",(api.body)="owner_ids,omitempty",(api.go_tag)="gorm:\"-\" ignore:\"yes\""];
  KeepLog keep_log = 24[(api.query)="keep_log",(api.body)="keep_log"];
}

message PutTaskReq {
  optional string name = 2[(api.query)="name",(api.body)="name,omitempty"];
  optional string description = 3[(api.query)="description",(api.body)="description,omitempty"];
  optional string lang = 4[(api.query)="lang",(api.body)="lang,omitempty"];
  TaskData data = 5[(api.query)="data",(api.body)="data,omitempty",(api.go_tag)="to_str:\"yes\""];
  Notify notify = 6[(api.query)="notify",(api.body)="notify,omitempty",(api.go_tag)="to_str:\"yes\""];
  optional int64 user_id = 7[(api.query)="user_id",(api.go_tag)="json:\"user_id,omitempty\""];
  optional string user = 8[(api.query)="user",(api.body)="user,omitempty"];
  google.protobuf.ListValue parent_task_ids = 25[(api.query)="parent_task_ids,omitempty",(api.body)="parent_task_ids,omitempty",(api.go_tag)="to_str:\"yes\""];
  optional bool parent_run_parallel = 26[(api.query)="parent_run_parallel",(api.go_tag)="json:\"parent_run_parallel,omitempty\""];
  google.protobuf.ListValue child_task_ids = 27[(api.query)="child_task_ids,omitempty",(api.body)="child_task_ids,omitempty",(api.go_tag)="to_str:\"yes\""];
  optional bool child_run_parallel = 28[(api.query)="child_run_parallel",(api.go_tag)="json:\"child_run_parallel,omitempty\""];
  google.protobuf.ListValue routing_keys = 29[(api.query)="routing_keys,omitempty",(api.body)="routing_keys,omitempty",(api.go_tag)="to_str:\"yes\""];
  optional int64 count = 9[(api.query)="count",(api.go_tag)="json:\"count,omitempty\""];
  optional string expr = 10[(api.query)="expr",(api.body)="expr,omitempty"];
  optional int64 timeout = 11[(api.query)="timeout",(api.go_tag)="json:\"timeout,omitempty\""];
  optional int32 route_policy = 12[(api.query)="route_policy",(api.go_tag)="json:\"route_policy,omitempty\""];
  optional string status = 14[(api.query)="status",(api.body)="status,omitempty"];
  optional int32 alarm_policy = 15[(api.query)="alarm_policy",(api.go_tag)="json:\"alarm_policy,omitempty\""];
  optional string expect_content = 16[(api.query)="expect_content",(api.body)="expect_content,omitempty"];
  optional int32 expect_code = 17[(api.query)="expect_code",(api.go_tag)="json:\"expect_code,omitempty\""];
  optional int32 retry = 18[(api.query)="retry",(api.go_tag)="json:\"retry,omitempty\""];
  optional string prev = 19[(api.query)="prev",(api.body)="prev,omitempty"];
  optional string next = 20[(api.query)="next",(api.body)="next,omitempty"];
  optional string updater = 21[(api.query)="updater",(api.body)="updater,omitempty"];
  optional bool deleted = 22[(api.query)="deleted",(api.go_tag)="json:\"deleted,omitempty\""];
  google.protobuf.ListValue owner_ids = 23[(api.query)="owner_ids,omitempty",(api.body)="owner_ids,omitempty",(api.go_tag)="gorm:\"-\" ignore:\"yes\""];
  KeepLog keep_log = 24[(api.query)="keep_log",(api.body)="keep_log,omitempty",(api.go_tag)="to_str:\"yes\""];
}

// The request message containing the user's name.
message TaskRequest {
  int64  task_id = 1;
  int32 task_type = 2;
  string task_lang = 3;
  bytes task_data = 4;
  string name = 5;
}


service TaskService {
  rpc GetTaskAll(TaskQuery) returns(TaskAllResp) {
    option (api.get) = "/api/v1/jobor/tasks";
  }
  rpc GetTaskById(TaskQuery) returns(TaskResp) {
    option (api.get) = "/api/v1/jobor/task/:id";
  }
  rpc GetTask(TaskQuery) returns(TaskResp) {
    option (api.get) = "/api/v1/jobor/task";
  }
  rpc RunTask(TaskQuery) returns(TaskResp) {
    option (api.post) = "/api/v1/jobor/task/:id/run";
  }
  rpc PostTask(PostTaskReq) returns(TaskResp) {
    option (api.post) = "/api/v1/jobor/task";
  }
  rpc PutTask(PutTaskReq) returns(TaskResp) {
    option (api.put) = "/api/v1/jobor/task/:id";
  }
  rpc DeleteTask(TaskQuery) returns(TaskResp) {
    option (api.delete) = "/api/v1/jobor/task/:id";
  }
}
